--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Shubham Shete | Engineering Student</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -35,14 +35,14 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
-  <meta property="og:description" content="Software Developer" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
-  <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
-  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
+  <meta property="og:title" content="Shubham Shete | Engineering Student" />
+  <meta property="og:description" content="Engineering Student" />
+  <meta property="og:url" content="https://github.com/tryhack682/shubhamshete.git" />
+  <meta property="og:site_name" content="Shubham Shete | Engineering Student" />
+  <meta property="article:publisher" content="https://github.com/tryhack682/shubhamshete.git" />
+<!--  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" /> -->
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary" />
+ <!--  <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@varad_bhogayata" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
@@ -68,9 +68,9 @@
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
   <!-- Google Site Verification for indexing -->
-  <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
-</head>
-
+ <!-- <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
+</head>  -->
+ 
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGZH8HT"
@@ -85,7 +85,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/my-passport-photo-square.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="assets\img\DSC_0842.JPG" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -94,16 +94,16 @@
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Experience section" href="#experience"
+        <a aria-label="Navigate to the Known Languaages section" href="#Known Languaages"
           class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Experience</span></a>
+            class="mdi-action-trending-up small"></i><span>Know Languages</span></a>
       </li>
 
       <li class="bold">
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+            class="mdi-av-my-library-books small"></i><span>Hall Of Frames</span></a>
       </li>
 
       <li class="bold">
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing" target="_blank"
+        <a aria-label="Open Varad's resume in a new tab" href="https://docs.google.com/document/d/1WnNt1daOUYOylYVmZBBDlPbJkx9SNuHcAfVjHLWZq-4/edit?usp=sharing" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -158,8 +158,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Shubham Shete</a><span class="black-text">Engineering Student</span>
     </div>
   </nav>
 
@@ -171,13 +170,13 @@
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Experience section" href="#experience"
+        <a aria-label="Navigate to the Known Languaages section" href="#Known Languaages"
           class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Experience</span></a>
+            class="mdi-action-trending-up small"></i><span>Konown Languages</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+            class="mdi-av-my-library-books small"></i><span>Hall Of Frame</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
@@ -194,7 +193,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
-          href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
+          href="https://docs.google.com/document/d/1WnNt1daOUYOylYVmZBBDlPbJkx9SNuHcAfVjHLWZq-4/edit?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -209,28 +208,28 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Varad Bhogayata.</span></h2>
+              <h2>Hi, I'm <span class="teal">Shubham Shete.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who loves solving a very complex, very challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <a href="www.linkedin.com/in/shubham-shete-954866204" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/varadbhogayata/" target="_blank">
+              <a href="https://github.com/tryhack682/shubham.git" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
               </a>
 
-              <a href="https://angel.co/u/varad_bhogayata" target="_blank">
+          <!--    <a href="https://angel.co/u/varad_bhogayata" target="_blank">
                 <button class="icon-btn angellist">
                   <i class="fa fa-angellist"></i>
                 </button>
-              </a>
+              </a>-->
 
               <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
                   <span class="fa-stack fa-lg">
@@ -261,11 +260,11 @@
         </blockquote> -->
         <p>
           
-          I am a Software Developer with 1 year of professional experience in Machine Learning, Computer Vision with a willingness to learn and master Software Development, Backend Development. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision. 
+          I am an Engineering Student from Information  Technology department . I am adept in Python, Java, Javascript, C , C++ , SQL . 
           <!-- Detail-oriented Software Engineer with a get-it-done, on-time, and high-quality product spirit and a keen interest in Software Development and Artificial Intelligence. -->
         </p>
         <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
+          Looking for an opportunity to work in a challenging position combining my skills in Security Reseach, which provides professional development, interesting Known Languaagess and personal growth.
         </p>
         <!-- <p>
           Another Paragraph
@@ -282,12 +281,12 @@
     </section>
 
 
-    <!-- Third Section: Experience -->
-    <section id="experience" class="section scrollspy">
-      <h3 class="page-title white-text teal">Experience</h3>
+    <!-- Third Section: Known Languaages -->
+    <section id="Known Languaages" class="section scrollspy">
+      <h3 class="page-title white-text teal">Known Languages</h3>
       <div class="container">
 
-        <!-- Latest Experience -->
+        <!-- Latest Known Languaages -->
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -296,7 +295,7 @@
                     src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
-              <div class="col s12 m10">
+    <!--       <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="http://meditab.com" target="_blank"
                       class="teal-text hoverline">Meditab</a></span>
@@ -329,7 +328,7 @@
           </div>
         </div>
 
-        <!-- Experience 2 -->
+        <!-- Known Languaages 2 
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -339,7 +338,7 @@
 
               </div>
 
-              <!-- <div class="col s12 m10"> -->
+              <!-- <div class="col s12 m10"> 
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.mtag.in" target="_blank"
@@ -368,9 +367,9 @@
           <div class="card-action">
             <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
           </div>
-        </div>
+        </div> -->
 
-        <!-- Experience 3 -->
+        <!-- Known Languaages 3 -->
         <!-- <div class="card">
           <div class="card-content">
             <div class="row">
